# Hello_world

./: .yamllint.yaml  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/config/: horusec-config.json
.github/helm-chart/: values-sandbox.yaml
.github/workflows/: build-k6-image.yml  build-kafka-connect.yml  e2e-testing.yml  helm-package-common.yml  ofs-deploy.yaml  yaml-lint.yaml
dev/docker-compose/: README.md  docker-compose.yml
helm-chart/: values-sandbox.yaml
helm-charts/test-helm/: Chart.yaml
integration_test/: readme.md  requirements.txt  test_dataflow.py
platform/: sample-new.yaml  sample-rename.yaml  testing.yaml
platform/argocd/: test.appset.yaml
platform/argocd/appset/: Chart.yaml  (+1 more)
platform/dlq-consumer/: Dockerfile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
platform/dlq-consumer/src/: config.py  config_loader.py  consumer.py  email_notifier.py  main.py  metrics.py
platform/dlq-consumer/src/config/: producer_owners.yaml  prometheus.yml
platform/dlq-consumer/tests/: mock_ownership.yaml  test_core_components.py
platform/helm/: Chart.yaml  values.yaml  values1.yaml
platform/monitoring/: connector_alerts.json  dashboard.json
resources/kafka-connect/: Dockerfile
terraform/: eks.tf  profile.tfvar  provider.tf  variables.tf  vpc.tf
terraform/ecr/: ecr.tf  providers.tf  roles.tf
utility/: .markdownlint.yaml  .pre-commit-config.yaml  check-all-files.sh  check-staged-java.sh  checkstyle.xml  setup-pre-commit-hooks.sh
utility/validate-onboarding-topics/: README.md  validate-onboarding-topics.py
(+146 files in other folders)
