[tool.poetry]
name = "uztna-profile-optimization"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
numpy = "^2.1.0"
pyarrow = "^18.0.0"
jupyter = "^1.0.0"
pyspark = "^3.5.4"
boto3 = "^1.35.97"
awswrangler = "^3.11.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
findspark = "^2.0.1"


psycopg2 = "2.9.1"
confluent-kafka = "^1.9.2"
boto3 = "1.24.0"
pytest = "7.0.0"
avro-python3 = "^1.10.2"
requests = "^2.26.0"
python-dotenv = "^0.19.2"




[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
